# fastapi-llm

./: .env.base  .env.dev  .env.prod  .gitignore  .platform.app.yaml  Makefile  README.md  auth.py  docker-compose.yml  env.py  kafka_consumer.py  models.py  pyproject.toml  scheduler.py  server.py  setup_project.py
alembic/versions/: initial_generic_schema.py
consumers/: kafka_config.py  notification_consumer.py
consumers/tests/: __init__.py
docs/: kafka.md  project_structure.md  services.md
services/: items.py  notifications.py  users.py  webhooks.py
